# rust-studies

./: README.md
advanced/macros/src/: lib.rs  main.rs
advanced/threads/: Cargo.toml
advanced/threads/src/: main.rs
beginner/data_types/src/: main.rs
beginner/hello_world/: README.md
beginner/unit_test/bank/src/: lib.rs
beginner/unit_test/bank/tests/: savings_account.rs
beginner/variables/src/: main.rs
projects/cli_jira/: Cargo.toml  README.md
projects/cli_jira/data/: db.json
projects/cli_jira/src/: db.rs  io_utils.rs  lib.rs  models.rs  navigator.rs
projects/cli_jira/src/ui/: mod.rs  prompts.rs
projects/cli_jira/src/ui/pages/: mod.rs  page_helpers.rs
projects/cli_jira/tests/: jira_database.rs  json_database.rs  navigator.rs  page_utils.rs  pages.rs
projects/cli_jira/tests/common/: mod.rs
projects/diesel_demo/: .env
projects/diesel_demo/migrations/2023-11-15-211348_create_posts/: up.sql
projects/microservice-project/: .dockerignore  Cargo.toml  Dockerfile.auth  Dockerfile.health  docker-compose.yaml
projects/microservice-project/src/auth-service/: auth.rs  main.rs  users.rs
projects/microservice-project/src/client/: main.rs
projects/microservice-project/src/health-check-service/: main.rs
