[package]
name = "cli_jira"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
itertools = "0.12"
ellipse = "0.2.0"
clearscreen = "2.0.1"
